# ywYang_Tutorial

./: 4.The_Info_data_structure.ipynb  5.MNE-Python_data_structures_from_array.ipynb  7.compute_visual_ERD.ipynb  compute_visual_ERD.ipynb  pyproject.toml
MNE_Python_Tutorial.git/: config  packed-refs
MNE_Python_Tutorial.git/objects/pack/: pack-66a9623cc2c714e060eeb406be099baab352ce2c.idx  pack-66a9623cc2c714e060eeb406be099baab352ce2c.pack  pack-66a9623cc2c714e060eeb406be099baab352ce2c.rev
MNE_Python_tutorial/: 1.overview_tutorial.ipynb  6(1). ERDS.ipynb  6. ERDs.ipynb  7(0).compute_visual_ERD.ipynb  7.compute_visual_ERD.ipynb
src/: Tutorial_With_My_EEG.ipynb
