[project]
name = "ywyang-mne-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dipy>=1.12.1",
    "edfio>=0.4.13",
    "eeglabio>=0.1.3",
    "h5io>=0.2.5",
    "h5py>=3.16.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.9",
    "matplotlib>=3.11.0",
    "mffpy>=0.11.0",
    "mne>=1.12.1",
    "mne-qt-browser>=0.7.5",
    "neo>=0.14.4",
    "nibabel>=5.4.2",
    "nilearn>=0.13.1",
    "numpy>=2.4.6",
    "openmeeg>=2.5.16",
    "pandas>=3.0.3",
    "pooch>=1.9.0",
    "pybv>=0.8.1",
    "pymatreader>=1.2.3",
    "pyopengl>=3.1.10",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
    "python-picard>=0.8.2",
    "pyvista>=0.48.4",
    "pyvistaqt>=0.11.4",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tqdm>=4.68.3",
    "xlrd>=2.0.2",
    "xmltodict>=1.0.4",
]
